Tested on Windows. It works.

--- a/Cloth/Code/CMakeLists.txt
+++ b/Cloth/Code/CMakeLists.txt
@@ -42,6 +42,7 @@ if(APPLE)                                                                       
 
   message("Setting APPLE build directory...")                                                       # Printing message...
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/mac)                             # Setting build directory...
+  message(${CMAKE_HOME_DIRECTORY}/build/mac)                                                        # Printing message...
 endif(APPLE)
 
 if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
@@ -65,41 +66,33 @@ if(UNIX AND NOT APPLE)                                                          
 
   message("Setting LINUX build directory...")                                                       # Printing message...
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/linux)                           # Setting build directory...
+  message(${CMAKE_HOME_DIRECTORY}/build/linux)                                                      # Printing message...
 endif(UNIX AND NOT APPLE)
 
-add_custom_target(run                                                                               # Adding "make run" command...
-  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}                                               # Working directory.
-  COMMAND ${PROJECT_NAME}                                                                           # Project name.
-  VERBATIM)                                                                                         # Escaping all commands properly for the build tool...
-
-if(UNIX AND NOT APPLE)                                                                              # Detecting non APPLE LINUX...
-  message("Setting LINUX variable, according to an existing LINUX (but not APPLE) OS...")           # Printing message...
-  set(LINUX TRUE)                                                                                   # Setting LINUX flag...
-endif()
-
 if(WIN32)                                                                                           # Detecting WINDOWS...
-  # EZOR: 03NOV2019 these 4 lines have to be tested.
-  message("Setting WINDOWS build directory...")                                                     # Printing message...
-  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/windows)                         # Setting build directory...
-  message("Adding an executable...")                                                                # Printing message...
-  add_executable(${PROJECT_NAME} ${SOURCES})                                                        # Adding executable...
-
-  message("Setting Windows include directories...")                                                 # Printing message...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Neutrino include directory.
+    ${NEUTRINO_PATH}/include)
   target_include_directories(                                                                       # Setting include directories...
-    ${PROJECT_NAME}                                                                                 # Project name.
-    PRIVATE ${CMAKE_HOME_DIRECTORY}/include                                                         # Neutrino includes.
-    ${GLAD_PATH}/include                                                                            # GLAD includes.
-    ${GLFW_PATH}/include                                                                            # GLFW includes.
-    ${NEUTRINO_PATH}/Code/include                                                                   # Neutrino includes.
-    ${CL_PATH}/include)                                                                             # OpenCL includes.
-  message("Setting Windows library directories...")                                                 # Printing message...
-  set(GLFW_LIBRARY ${GLFW_PATH}/lib-vc2019/glfw3.lib)                                               # GLFW library.
-  #set(CL_LIBRARY $"C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.1/lib/x64/OpenCL.lib")
+    ${PROJECT_NAME} PRIVATE                                                                         # Project name.
+    ${INCLUDES})                                                                                    # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
   target_link_libraries(                                                                            # Setting other linked libraries...
     ${PROJECT_NAME}                                                                                 # Project name.
     ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
-    ${GLFW_LIBRARY})                                                                                # GLFW library.
+    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
+    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
+
+  message("Setting WINDOWS build directory...")                                                     # Printing message...
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/windows)                         # Setting build directory...
+  message(${CMAKE_HOME_DIRECTORY}/build/windows)                                                    # Printing message...
 endif(WIN32)
+
+install(
+  TARGETS ${PROJECT_NAME}                                                                           # Project name.
+  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
 
 message("DONE!")                                                                                    # Printing message...
 
@@ -134,9 +127,8 @@ message("#######################################################################
 message("Now go to the \"./cmake\" directory created by this command and do one (or more)")         # Printing message...
 message("of the following things:")                                                                 # Printing message...
 message("")                                                                                         # Printing message...
-message("1. Type: \"make\" in order to build the executable.")                                      # Printing message...
-message("2. Type: \"make run\" in order to build and run the executable.")                          # Printing message...
-message("3. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
+message("1. Type: \"make install\" in order to build and install the Sinusoid executable.")         # Printing message...
+message("2. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
 message("")                                                                                         # Printing message...
 message("################################################################################")         # Printing message...
 message("############################# CONFIGURATION REPORT #############################")         # Printing message...
