--- a/Sinusoid/Code/CMakeLists.txt
+++ b/Sinusoid/Code/CMakeLists.txt
@@ -42,6 +42,7 @@ if(APPLE)                                                                       
 
   message("Setting APPLE build directory...")                                                       # Printing message...
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/mac)                             # Setting build directory...
+  message(${CMAKE_HOME_DIRECTORY}/build/mac)                                                        # Printing message...
 endif(APPLE)
 
 if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
@@ -65,6 +66,7 @@ if(UNIX AND NOT APPLE)                                                          
 
   message("Setting LINUX build directory...")                                                       # Printing message...
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/linux)                           # Setting build directory...
+  message(${CMAKE_HOME_DIRECTORY}/build/linux)                                                      # Printing message...
 endif(UNIX AND NOT APPLE)
 
 if(WIN32)                                                                                           # Detecting WINDOWS...
@@ -85,12 +87,12 @@ if(WIN32)                                                                       
 
   message("Setting WINDOWS build directory...")                                                     # Printing message...
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/windows)                         # Setting build directory...
+  message(${CMAKE_HOME_DIRECTORY}/build/windows)                                                    # Printing message...
 endif(WIN32)
 
-add_custom_target(run                                                                               # Adding "make run" command...
-  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}                                               # Working directory.
-  COMMAND ${PROJECT_NAME}                                                                           # Project name.
-  VERBATIM)                                                                                         # Escaping all commands properly for the build tool...
+install(
+  TARGETS ${PROJECT_NAME}                                                                           # Project name.
+  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
 
 message("DONE!")                                                                                    # Printing message...
 
@@ -125,9 +127,8 @@ message("#######################################################################
 message("Now go to the \"./cmake\" directory created by this command and do one (or more)")         # Printing message...
 message("of the following things:")                                                                 # Printing message...
 message("")                                                                                         # Printing message...
-message("1. Type: \"make\" in order to build the executable.")                                      # Printing message...
-message("2. Type: \"make run\" in order to build and run the executable.")                          # Printing message...
-message("3. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
+message("1. Type: \"make install\" in order to build and install the Sinusoid executable.")         # Printing message...
+message("2. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
 message("")                                                                                         # Printing message...
 message("################################################################################")         # Printing message...
 message("############################# CONFIGURATION REPORT #############################")         # Printing message...
