--- a/Cloth/Code/CMakeLists.txt
+++ b/Cloth/Code/CMakeLists.txt
@@ -38,7 +38,7 @@ if(APPLE)                                                                       
     "-framework OpenCL"                                                                             # OpenCL library.
     ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
     "-lm"
-    "-lneutrino")
+    ${NEUTRINO_PATH}/lib/libnu.a)
 
   message("Setting APPLE build directory...")                                                       # Printing message...
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/mac)                             # Setting build directory...
