--- a/Cloth/Code/CMakeSettings.json
+++ b/Cloth/Code/CMakeSettings.json
@@ -1,16 +1,28 @@
 ﻿{
-  // See https://go.microsoft.com//fwlink//?linkid=834763 for more information about this file.
   "configurations": [
     {
       "name": "x64-Debug",
       "generator": "Ninja",
       "configurationType": "Debug",
       "inheritEnvironments": [ "msvc_x64_x64" ],
-      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "buildRoot": "${projectDir}\\build\\windows",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeCommandArgs": "",
+      "cmakeCommandArgs": "-DNEUTRINO_PATH=E:/BookHouseBoys/ezor/NeutrinoCodes/libnu -DGLFW_PATH=E:/BookHouseBoys/ezor/NeutrinoCodes/glfw -DGLFW_PATH=E:/BookHouseBoys/ezor/NeutrinoCodes/glfw -DCL_PATH=\"C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.1\"",
       "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "",
+      "variables": []
+    },
+    {
+      "name": "x64-Release",
+      "generator": "Ninja",
+      "configurationType": "RelWithDebInfo",
+      "buildRoot": "${projectDir}\\build\\windows",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "-DNEUTRINO_PATH=E:/BookHouseBoys/ezor/NeutrinoCodes/libnu -DGLFW_PATH=E:/BookHouseBoys/ezor/NeutrinoCodes/glfw -DGLFW_PATH=E:/BookHouseBoys/ezor/NeutrinoCodes/glfw -DCL_PATH=\"C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.1\"",
+      "buildCommandArgs": "-v",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "variables": []
     }
   ]
 }
