--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,7 @@
 /Sinusoid/Code/cmake
 /Sinusoid/Code/build
 /Sinusoid/Docs/Doxygen
+/Gravity/Code/cmake
+/Gravity/Code/build
+/Gravity/Docs/Doxygen
 .vs
