Fixed window names, Cloth3D example has been renamed to Gmsh. Ready for PR.

--- a/Gmsh/Code/CMakeLists.txt
+++ b/Gmsh/Code/CMakeLists.txt
@@ -7,7 +7,7 @@ message("################################ C/C++ COMPILER #######################
 message("################################################################################")         # Printing message...
 
 message("Setting project name...")                                                                  # Printing message...
-project (cloth3D)                                                                                   # Setting project name...
+project (gmsh_test)                                                                                 # Setting project name...
 message("Project name = ${PROJECT_NAME}")                                                           # Printing message...
 
 message("Setting build type...")                                                                    # Printing message...
