--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,9 @@ message("Setting project name...")                                              
 project (examples)                                                                                  # Setting project name...
 message("Project name = ${PROJECT_NAME}")                                                           # Printing message...
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD 17)                                                                          # Setting C++17 standard...
+set(CMAKE_CXX_STANDARD_REQUIRED ON)                                                                 # Setting complier standard requirement...
+set(CMAKE_CXX_EXTENSIONS OFF)                                                                       # Disabling compiler-specific standards...
 
 message("Setting build type...")                                                                    # Printing message...
 set(CMAKE_BUILD_TYPE Release)                                                                       # Setting build type...
@@ -49,15 +49,15 @@ if(APPLE)                                                                       
     "-framework OpenGL"                                                                             # OpenGL library.
     "-framework OpenCL"                                                                             # OpenCL library.
     ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
-    "-lm"
-    ${NEUTRINO_PATH}/lib/libnu.a)
+    "-lm"                                                                                           # "math" library.
+    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
 endif(APPLE)
 
 if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
   message("Adding include files...")                                                                # Printing message...
   set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
-    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Neutrino include directory.
-    ${NEUTRINO_PATH}/include)
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
   target_include_directories(                                                                       # Setting include directories...
     ${TARGET_NAME} PRIVATE                                                                          # Target name.
     ${INCLUDES})                                                                                    # All include directories.
@@ -76,8 +76,8 @@ endif(UNIX AND NOT APPLE)
 if(WIN32)                                                                                           # Detecting WINDOWS...
   message("Adding include files...")                                                                # Printing message...
   set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
-    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Neutrino include directory.
-    ${NEUTRINO_PATH}/include)
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
   target_include_directories(                                                                       # Setting include directories...
     ${TARGET_NAME} PRIVATE                                                                          # Target name.
     ${INCLUDES})                                                                                    # All include directories.
