Working on multiple builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,10 @@ message("#######################################################################
 message("################################### Sinusoid ###################################")         # Printing message...
 message("################################################################################")         # Printing message...
 
-set(TARGET_NAME "sinusoid")                                                                         # Setting executable name...
-set(DIRECTORY_NAME "Sinusoid/Code")                                                                 # Setting directory name...
+set(TARGET_1_NAME "sinusoid")                                                                         # Setting executable name...
+set(DIRECTORY_1_NAME "Sinusoid/Code")                                                                 # Setting directory name...
+
+# EZOR 22MAY2020: to be completed.
 
 message("Adding source files for ${TARGET_NAME}...")                                                # Printing message...
 aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_NAME}/src SRC_FILES)                       # Getting all Neutrino source files...
@@ -99,6 +101,92 @@ install(
   DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
 
 message("DONE!")                                                                                    # Printing message...
+
+
+
+message("")                                                                                         # Printing message...
+message("################################################################################")         # Printing message...
+message("################################### Cloth ###################################")         # Printing message...
+message("################################################################################")         # Printing message...
+
+set(TARGET_NAME "cloth")                                                                         # Setting executable name...
+set(DIRECTORY_NAME "Cloth/Code")                                                                 # Setting directory name...
+
+message("Adding source files for ${TARGET_NAME}...")                                                # Printing message...
+aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_NAME}/src SRC_FILES)                       # Getting all Neutrino source files...
+set(SOURCES                                                                                         # Setting "SOURCES" variable...
+  ${SRC_FILES})                                                                                     # All project source files.
+
+message("Adding build target as executable...")                                                     # Printing message...
+add_executable(${TARGET_NAME} ${SOURCES})                                                           # Adding executable...
+
+if(APPLE)                                                                                           # Detecting APPLE...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/${DIRECTORY_NAME}/include                                               # Setting example include directory...
+    ${NEUTRINO_PATH}/include)                                                                       # Setting Neutrino include directory...
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_NAME} PRIVATE                                                                          # Target name.
+    ${INCLUDES})                                                                                    # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_NAME}                                                                                  # Target name.
+    "-framework OpenGL"                                                                             # OpenGL library.
+    "-framework OpenCL"                                                                             # OpenCL library.
+    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
+    "-lm"                                                                                           # "math" library.
+    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
+endif(APPLE)
+
+if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_NAME} PRIVATE                                                                          # Target name.
+    ${INCLUDES})                                                                                    # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_NAME}                                                                                  # Target name.
+    "-lOpenGL"                                                                                      # OpenGL library.
+    "-lOpenCL"                                                                                      # OpenCL library.
+    "-ldl"                                                                                          # "libdl" library.
+    "-lglfw"                                                                                        # GLFW library.
+    "-lm"                                                                                           # "math" library.
+    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
+endif(UNIX AND NOT APPLE)
+
+if(WIN32)                                                                                           # Detecting WINDOWS...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_NAME} PRIVATE                                                                          # Target name.
+    ${INCLUDES})                                                                                    # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_NAME}                                                                                  # Target name.
+    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
+    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
+    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
+endif(WIN32)
+
+message("Setting build directory...")                                                               # Printing message...
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
+message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
+
+install(
+  TARGETS ${TARGET_NAME}                                                                            # Target name.
+  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
+
+message("DONE!")                                                                                    # Printing message...
+
+
 
 
 message("")                                                                                         # Printing message...
